--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,15 @@
 body {
-    background-color: grey;
+    background-color: black;
     margin: 0;
     padding: 0;
+}
+
+.controls {
+    text-align: center;
+    margin: 1em 0;
+    color: #d0d0d0;
+    font-weight: bold;
+    font-size: 1em;
 }
 
 canvas {
